[gd_scene load_steps=35 format=3 uid="uid://cjek8dbcrl4x2"]

[ext_resource type="Texture2D" uid="uid://dbhda5qgkhqrn" path="res://resources/characters/goblin_mage.png" id="1_j2dsb"]
[ext_resource type="Script" uid="uid://c82snnbutyxim" path="res://scripts/mage.gd" id="1_y6d06"]
[ext_resource type="Script" uid="uid://dbhl1eecsnfrr" path="res://scripts/mage_animation_tree.gd" id="3_t2cfv"]

[sub_resource type="Animation" id="Animation_t2cfv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_j2dsb"]
resource_name = "attack_left"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.2, 1.3, 1.5, 1.7, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_p0roq"]
resource_name = "attack_right"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.2, 1.3, 1.5, 1.7, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(1, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_66amf"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_y6d06"]
resource_name = "idle_left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_r5lxc"]
resource_name = "idle_right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yb71v"]
resource_name = "run_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nc4w5"]
resource_name = "run_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p0roq"]
_data = {
&"RESET": SubResource("Animation_t2cfv"),
&"attack_left": SubResource("Animation_j2dsb"),
&"attack_right": SubResource("Animation_p0roq"),
&"death": SubResource("Animation_66amf"),
&"idle_left": SubResource("Animation_y6d06"),
&"idle_right": SubResource("Animation_r5lxc"),
&"run_left": SubResource("Animation_yb71v"),
&"run_right": SubResource("Animation_nc4w5")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j2dsb"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y6d06"]
animation = &"attack_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_t2cfv"]
blend_point_0/node = SubResource("AnimationNodeAnimation_j2dsb")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_y6d06")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r5lxc"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yb71v"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nc4w5"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_p0roq"]
blend_point_0/node = SubResource("AnimationNodeAnimation_yb71v")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_nc4w5")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_66amf"]
animation = &"run_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aoi4v"]
animation = &"run_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_v7jpn"]
blend_point_0/node = SubResource("AnimationNodeAnimation_66amf")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_aoi4v")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nu52m"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_trnrn"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kse8p"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yunhw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fi4q4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1pdv6"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qtcmm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ut8cs"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ad11k"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_aoi4v"]
states/attack/node = SubResource("AnimationNodeBlendSpace1D_t2cfv")
states/attack/position = Vector2(713, 198)
states/death/node = SubResource("AnimationNodeAnimation_r5lxc")
states/death/position = Vector2(713, 100)
states/idle/node = SubResource("AnimationNodeBlendSpace1D_p0roq")
states/idle/position = Vector2(362, 100)
states/run/node = SubResource("AnimationNodeBlendSpace1D_v7jpn")
states/run/position = Vector2(362, 198)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_nu52m"), "death", "End", SubResource("AnimationNodeStateMachineTransition_trnrn"), "idle", "death", SubResource("AnimationNodeStateMachineTransition_kse8p"), "attack", "death", SubResource("AnimationNodeStateMachineTransition_yunhw"), "run", "death", SubResource("AnimationNodeStateMachineTransition_fi4q4"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_1pdv6"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_qtcmm"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_ut8cs"), "run", "attack", SubResource("AnimationNodeStateMachineTransition_ad11k")]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_66amf"]
radius = 8.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aoi4v"]
radius = 3.0
height = 14.0

[node name="mage" type="CharacterBody2D" groups=["characters"]]
script = ExtResource("1_y6d06")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -10)
texture = ExtResource("1_j2dsb")
hframes = 10
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p0roq")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_aoi4v")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/attack/blend_position = 0.0
parameters/idle/blend_position = 0.0
parameters/run/blend_position = 0.0
script = ExtResource("3_t2cfv")

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Hurtbox" type="CollisionShape2D" parent="HurtArea"]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_66amf")
debug_color = Color(0.81853825, 0.0018636227, 0.97067994, 0.41960785)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_aoi4v")

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="area_entered" from="HurtArea" to="." method="_on_hurt_area_entered"]
